[package]
name = "multi-os"
version = "0.1.0"
edition = "2021"
[profile.dev]
panic = "abort" # disable stack unwinding on panic

[profile.release]
panic = "abort" # disable stack unwinding on panic
[dependencies.lazy_static]
version="1.0"
features = ["spin_no_std"]
[dependencies.bootloader]
version="0.9.29"
features = ["map_physical_memory"]
[dependencies]
volatile= "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259="0.10.1"
educe = "0.6.0"
pc-keyboard = "0.7.0"
rlsf = "0.2.1"
linked_list_allocator = "0.9.0"
[dependencies.indexed_valued_enums]
version = "1.0.0"
features=["derive"]
[unstable]
build-std = ["core", "compiler_builtins","alloc"]
build-std-features = ["compiler-builtins-mem"]

